--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -2,13 +2,19 @@
     width: 40%;
     display:block;
     font-size: 1.4em;
+    text-align: center;
 
 
 }
 .about{
-    display: flex;
-    padding: auto;
-    align-items: center;
-    justify-content: center;
+    display: block;
     width: 100%;
+    text-align: center;
+    
+ 
+   
+}
+
+@media (max-width: 800px) {
+    .about-text{width: 100%;}
 }
