--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -1,16 +1,44 @@
 
-.about{
+.contact{
     display: block;
-    background-color: aquamarine;
+    background-color: rgb(11, 25, 20);
     border: 1px solid;
-    padding: 5px;
+    padding: 40px;
     margin: 5px;
     justify-content: space-between;
     align-items: center;
     justify-items: center;
+    font-size: 1.2em;
+    text-align: center;
 
 }
 .date{
     color:blue ;
     font-size: 2em;
+    padding: 30px;
+}
+.cont{
+    background: none;
+    width: 50px;
+    border-radius: 50%;
+    align-items: center;
+    justify-items: center;
+    
+; 
+}
+.img1{
+    width: 250px;
+    display:flex;
+    justify-content: space-between;
+    justify-items:center;
+    align-items: center;
+    padding: 20px;
+ 
+    
+}
+.footer{
+    padding:20px;
+    margin:10px;
+    text-align: center;
+    font-size: 1.4em;
 }
