--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -33,3 +33,22 @@
 
 
 }
+.class-image{
+    width: 500px;
+    opacity: 0.7;
+
+}
+.home-container{
+    display: flex;
+    margin-left:auto;
+    margin-right:auto;
+    align-content: center;
+    padding: 70px 0;
+
+    text-align: center;
+    font-size: 1.2em;
+}
+
+@media (max-width: 800px) {
+    .home-text{width: 100%;}
+}
