--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -1,7 +1,7 @@
 
 .contact{
     display: block;
-    background-color: rgb(11, 25, 20);
+    background-color: rgb(28, 49, 41);
     border: 1px solid;
     padding: 40px;
     margin: 5px;
@@ -10,6 +10,7 @@
     justify-items: center;
     font-size: 1.2em;
     text-align: center;
+    color: azure;
 
 }
 .date{
