--- a/src/Components/Education/Education.css
+++ b/src/Components/Education/Education.css
@@ -1,9 +1,18 @@
+
 .education{
     /* display: flex;
     align-items: center;
     justify-content: space-between; */
     display: flexbox;
     padding: 10px;
+    background: linear-gradient(rgba(8,0,58,0.7),rgba(8,0,58,0.7)), url('../../assets/kenya.png');
+    background-size:cover;
+    color: azure;
+    padding-top: 50px;
+    background-position: center;  /* Centers the image */
+    background-repeat: no-repeat; /* Prevents repetition */
+  
+    width: 100vw; /* Ensures full width */
     
 }
 .edu{
@@ -25,13 +34,13 @@
 }
 .edu h2{
     border: 1px solid;
-    background-color: rgb(67, 114, 180);
+    background-color: rgb(205, 98, 22);
    }
 .edu img{
     width: 100%;
     height: 300px;
   
-    opacity: 0.5;
+    
 }
 .caption{
     /* position: absolute; */
@@ -39,21 +48,25 @@
     left: 0;
     right: 0;
     bottom: 0;
-    color:rgb(4, 21, 21);
+    color:#e4f0f0;
  
     cursor: pointer;
    
     flex-basis: 60%;
-    font-style: italic;
+ 
     margin:  20px
     
    
   
 }
-.edu:hover .img{
+.tit{
+    font-size: 1.5em;
+    color: aqua;
+}
+/* .edu:hover .img{
     opacity: 1;
     cursor: pointer;
-}
+} */
 
 .img{
     flex-basis: 20%;
@@ -66,12 +79,32 @@
     display: flexbox;
     text-align: center;
     align-content: center;
-    color: rebeccapurple;
+    color: rgb(230, 134, 25);
     font-size: 30px;
     font-weight: bolder;
 }
-@media (max-width: 800px) {
-    *{
-      flex-direction: column;
+
+@media (max-width: 860px) {
+ 
+    .education{
+        display: block;
+        color: beige;
+        background: linear-gradient(rgba(8,0,58,0.7),rgba(8,0,58,0.7)), url('../../assets/cwsi.jpg');
+        background-size:auto;
+        padding-top: 50px;
+        background-position: center;  /* Centers the image */
+    background-repeat: no-repeat; /* Prevents repetition */
+  
+    width: 100vw; /* Ensures full width */
+        
     }
+    .edu img{
+        width: 30%;
+        height: auto;
+        /* position: absolute; */
+        object-fit: cover;
+      
+   
+    }
+
   }
