--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -7,12 +7,13 @@
         display: flex;
     align-items: center;
     justify-content: center;
+    background-color: grey;
 
 
 }
 .hero-text{
     text-align: center;
-    max-width:800px;
+    max-width:90%;
  
 }
 .hero-text h1{
@@ -22,7 +23,7 @@
 .hero-text p{
     margin: 10px auto 20px;
     line-height:1.4 ;
-    max-width: 700px;
+    max-width: 90%  ;
 
 }
 .hero-text ol{
@@ -41,4 +42,7 @@
     font-weight: bold;
     font-size: 40px;
     color:green;
+}
+.hero-container{
+    display:block;
 }
