--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -21,6 +21,7 @@ nav ul li{
     margin: 5px 20px;
     list-style: none;
     font-size: 16px;
+    
 
 }
 .container{
@@ -54,16 +55,37 @@ nav ul li{
 
     
 }
+a{
+    text-decoration: none;
+}
+.btn1{
+    background-color: rgb(0, 255, 30);
+    color: rgb(55, 51, 51);
+    padding: 7px 7px;
+    border-radius: 30px;
+    border: 0;
+    outline: 0;
+    cursor: pointer;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    transition:background-color 0.25s;
+
+}
+.btn1:hover{
+    background-color: rgb(145, 192, 214);
+    color:rgb(249, 74, 15)
+}
 
 @media (max-width: 800px) {
     nav ul li {
       display: block;
       right: 0;
-      margin: 25px 40px;
+      margin: 20px 10px;
     }
     nav ul{
         position: fixed;
-        width: 150px;
+        width: 100px;
         right: 0px;
         background-color: blue;
         display: block;
@@ -71,16 +93,19 @@ nav ul li{
     nav{
         
         padding: 15px 0;
-       
         width: 100%;
         right: 0px;
         background-color: blue;
-        display: flex;
+        display: block;
+        justify-content: left;
+        justify-items: center;
       
        
-      
-        
-       
+
+    }
+    .name{
+        justify-items:center;
+
     }
     
     .logo{display: none;}
@@ -90,6 +115,13 @@ nav ul li{
         height: auto;
         display: block;
         cursor: pointer;
+        position: fixed;
+      
+        right:1%;
+        top:2%;
+        background-color: blue;
+        display: block;
+        z-index: 1;
       
     
        
