--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -20,7 +20,7 @@
 }
 .cont{
     background: none;
-    width: 50px;
+    width: 20%;
     border-radius: 50%;
     align-items: center;
     justify-items: center;
@@ -28,7 +28,7 @@
 ; 
 }
 .img1{
-    width: 250px;
+    width: 30%;
     display:flex;
     justify-content: space-between;
     justify-items:center;
@@ -42,4 +42,27 @@
     margin:10px;
     text-align: center;
     font-size: 1.4em;
+}
+
+@media (max-width: 860px) {
+    .img1{
+        width: 90%;
+        display:inline-flex;
+        justify-content: space-between;
+        justify-items:center;
+        align-items: center;
+        padding: 20px;
+     
+        
+    }
+    .img2{
+        width: 90%;
+        display:inline-flex;
+        
+        justify-items:center;
+        align-items: center;
+        padding: 20px;
+     
+        
+    }
 }
