--- a/src/Components/Education/Education.css
+++ b/src/Components/Education/Education.css
@@ -24,11 +24,13 @@
 
   
     border: 2px solid rgb(80, 71, 71);
+    width: 95%;
     /* position: relative; */
     
 }
 .edu li{
     padding: 5px;
+
     
     
 }
@@ -54,14 +56,16 @@
    
     flex-basis: 60%;
  
-    margin:  20px
+    margin:  20px;
+    width: 90%
     
    
   
 }
 .tit{
-    font-size: 1.5em;
+    font-size: 1.em;
     color: aqua;
+    width: 100%;
 }
 /* .edu:hover .img{
     opacity: 1;
@@ -75,7 +79,7 @@
   
 }
 
-.education h2{
+.education h2,h3{
     display: flexbox;
     text-align: center;
     align-content: center;
@@ -105,6 +109,11 @@
         object-fit: cover;
       
    
+    }
+    .education h3{
+        color:rgb(243, 14, 155);
+        font-size: 1.3em;
+        text-align: center;
     }
 
   }
