--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -80,15 +80,15 @@ a{
 @media (max-width: 800px) {
     nav ul li {
       display: block;
-      right: 0;
-      margin: 20px 10px;
+     
+      margin: 2px 2px;
     }
     nav ul{
         position: fixed;
-        width: 100px;
-        right: 0px;
+        width: 100%;
+        top: 7px;
         background-color: blue;
-        display: block;
+        display: flex;
     }
     nav{
         
@@ -105,6 +105,7 @@ a{
     }
     .name{
         justify-items:center;
+        display: none;
 
     }
     
@@ -117,8 +118,8 @@ a{
         cursor: pointer;
         position: fixed;
       
-        right:2%;
-        top:2%;
+        left:2%;
+        top:1%;
         background-color: blue;
         display: block;
         z-index: 1;
