--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -15,6 +15,7 @@ nav{
 .logo{
     max-width: 40px;
     height: auto;
+    border-radius: 50%;
 }
 nav ul li{
     display: inline-block;
@@ -87,6 +88,7 @@ a{
         position: fixed;
         width: 100%;
         top: 7px;
+        left:15%;
         background-color: blue;
         display: flex;
     }
