--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -125,6 +125,7 @@ a{
         background-color: blue;
         display: block;
         z-index: 1;
+        border-radius: 50%;
       
     
        
