--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -7,8 +7,9 @@
         display: flex;
     align-items: center;
     justify-content: center;
-    background-color: grey;
+    background-color: rgb(241, 236, 236);
     padding-top: 9%;
+    
 
 
 }
@@ -27,15 +28,18 @@
     max-width: 90%  ;
 
 }
-.hero-text ol{
+.hero-text ol li{
     padding: 10px;
     margin: 10px auto 20px;
+    padding-left: 20%;
     line-height:1.4 ;
     font-family: 'Times New Roman', Times, serif;
     font-weight: bold;
+    text-align: left;
 
     font-size: 17px;
     display: block;
+    list-style:none;
    
 
 }
